--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
       integrity="sha512-DZqqY3PiOvTP9HkjIWgjO6ouCbq+dxqWoJZ/Q+zPYNHmlnI2dQnbJ5bxAHpAMw+LXRm4D72EIRXzvcHQtE8/VQ=="
       crossorigin="anonymous"
     ></script>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
