--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./.style/style.css" />
+    <link rel="stylesheet" href="/.style/style.css" />
     <!-- <meta http-equiv="refresh" content="1">  -->
     <title>Github User</title>
   </head>
@@ -37,6 +37,6 @@
       integrity="sha512-DZqqY3PiOvTP9HkjIWgjO6ouCbq+dxqWoJZ/Q+zPYNHmlnI2dQnbJ5bxAHpAMw+LXRm4D72EIRXzvcHQtE8/VQ=="
       crossorigin="anonymous"
     ></script>
-    <script src="./script.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
